crates/weaveffi-cli/tests/snapshots/python_nested_modules__README_md.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
<!-- Generated by WeaveFFI [VERSION] from api.yml -->
<!-- DO NOT EDIT. Your changes will be overwritten. -->
<!-- To regenerate: weaveffi generate api.yml -o <out> -->

# nested_modules (Python)

Python bindings for the `nested_modules` native library, built on `ctypes`.

## Requirements

- Python 3.9 or later
- The native library (`libnested_modules.so`, `libnested_modules.dylib`, or `nested_modules.dll`)

## Install

```bash
pip install .
```

## Loading the native library

The bindings load the library from `NESTED_MODULES_LIBRARY` when it is set (a full path),
then from inside the installed package, then from the system loader's search
path.

## Usage

```python
import nested_modules
```

<!-- END README.md -->
