crates/weaveffi-cli/tests/snapshots/python_nested_modules__weaveffi_weaveffi_py.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION] from weaveffi.yml
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate weaveffi.yml -o <out>

"""WeaveFFI Python ctypes bindings (auto-generated)"""
import contextlib
import ctypes
import os
import platform
import struct
from dataclasses import dataclass
from enum import IntEnum
from typing import Callable, Dict, Iterator, List, Optional


class WeaveFFIError(Exception):
    def __init__(self, code: int, message: str) -> None:
        self.code = code
        self.message = message
        super().__init__(f"({code}) {message}")


class _WeaveFFIErrorStruct(ctypes.Structure):
    _fields_ = [
        ("code", ctypes.c_int32),
        ("message", ctypes.c_char_p),
        ("payload_ptr", ctypes.c_void_p),
        ("payload_len", ctypes.c_size_t),
    ]


def _load_library() -> ctypes.CDLL:
    # An explicit path in WEAVEFFI_LIBRARY wins, so callers can point at a
    # specific build artifact regardless of its file name or location.
    override = os.environ.get("WEAVEFFI_LIBRARY")
    if override:
        return ctypes.CDLL(override)
    system = platform.system()
    if system == "Darwin":
        name = "libweaveffi.dylib"
    elif system == "Windows":
        name = "weaveffi.dll"
    else:
        name = "libweaveffi.so"
    return ctypes.CDLL(name)


_lib = _load_library()

# The ABI revision these bindings were generated against. Checked before any
# other symbol is bound so a mismatched producer fails at import time instead
# of misreading the error struct or a value buffer later.
_ABI_VERSION = 1


def _check_abi_version(lib: ctypes.CDLL) -> None:
    try:
        fn = lib.weaveffi_abi_version
    except AttributeError:
        raise ImportError(
            "the loaded WeaveFFI library predates ABI versioning "
            f"(these bindings expect ABI revision {_ABI_VERSION})"
        ) from None
    fn.argtypes = []
    fn.restype = ctypes.c_uint32
    found = fn()
    if found != _ABI_VERSION:
        raise ImportError(
            f"WeaveFFI ABI mismatch: these bindings expect revision {_ABI_VERSION} "
            f"but the loaded library reports revision {found}"
        )


_check_abi_version(_lib)
_lib.weaveffi_error_clear.argtypes = [ctypes.POINTER(_WeaveFFIErrorStruct)]
_lib.weaveffi_error_clear.restype = None
# Async completion callbacks receive a heap-boxed error the consumer owns;
# weaveffi_error_free releases the message, the payload, and the box.
_lib.weaveffi_error_free.argtypes = [ctypes.POINTER(_WeaveFFIErrorStruct)]
_lib.weaveffi_error_free.restype = None
# The free helpers take raw addresses (`c_void_p`) so wrappers can release
# owned producer allocations they hold as plain integers or typed pointers.
_lib.weaveffi_free_string.argtypes = [ctypes.c_void_p]
_lib.weaveffi_free_string.restype = None
_lib.weaveffi_free_bytes.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
_lib.weaveffi_free_bytes.restype = None


def _check_error(err: _WeaveFFIErrorStruct) -> None:
    if err.code != 0:
        code = err.code
        message = err.message.decode("utf-8") if err.message else ""
        _lib.weaveffi_error_clear(ctypes.byref(err))
        raise WeaveFFIError(code, message)


class _PointerGuard(contextlib.AbstractContextManager):
    def __init__(self, ptr, free_fn) -> None:
        self.ptr = ptr
        self._free_fn = free_fn

    def __exit__(self, *exc) -> bool:
        if self.ptr is not None:
            self._free_fn(self.ptr)
            self.ptr = None
        return False


def _string_to_bytes(s: Optional[str]) -> Optional[bytes]:
    if s is None:
        return None
    return s.encode("utf-8")


def _bytes_to_string(ptr) -> Optional[str]:
    if ptr is None:
        return None
    return ptr.decode("utf-8")


def _take_string(ptr) -> Optional[str]:
    """Copy an owned C string (a raw address) and free the producer buffer."""
    if not ptr:
        return None
    _s = ctypes.string_at(ptr).decode("utf-8")
    _lib.weaveffi_free_string(ptr)
    return _s


class _BufferWriter:
    """Encodes values into the WeaveFFI value-buffer wire format:
    little-endian, packed, no alignment."""

    def __init__(self) -> None:
        self._buf = bytearray()

    def finish(self) -> bytes:
        return bytes(self._buf)

    def write_bool(self, v) -> None:
        self._buf.append(1 if v else 0)

    def write_i8(self, v: int) -> None:
        self._buf += struct.pack("<b", v)

    def write_u8(self, v: int) -> None:
        self._buf += struct.pack("<B", v)

    def write_i16(self, v: int) -> None:
        self._buf += struct.pack("<h", v)

    def write_u16(self, v: int) -> None:
        self._buf += struct.pack("<H", v)

    def write_i32(self, v: int) -> None:
        self._buf += struct.pack("<i", v)

    def write_u32(self, v: int) -> None:
        self._buf += struct.pack("<I", v)

    def write_i64(self, v: int) -> None:
        self._buf += struct.pack("<q", v)

    def write_u64(self, v: int) -> None:
        self._buf += struct.pack("<Q", v)

    def write_f32(self, v: float) -> None:
        self._buf += struct.pack("<f", v)

    def write_f64(self, v: float) -> None:
        self._buf += struct.pack("<d", v)

    def write_len(self, n: int) -> None:
        self._buf += struct.pack("<I", n)

    def write_option_flag(self, present) -> None:
        self._buf.append(1 if present else 0)

    def write_string(self, v: str) -> None:
        _b = v.encode("utf-8")
        self.write_len(len(_b))
        self._buf += _b

    def write_bytes(self, v: bytes) -> None:
        self.write_len(len(v))
        self._buf += bytes(v)


class _BufferReader:
    """Decodes values from the WeaveFFI value-buffer wire format, rejecting
    truncated buffers, invalid flag bytes, invalid UTF-8, and oversized
    length prefixes."""

    def __init__(self, data: bytes) -> None:
        self._data = memoryview(data)
        self._pos = 0

    def _take(self, n: int, what: str) -> memoryview:
        if len(self._data) - self._pos < n:
            raise WeaveFFIError(-1, f"malformed value buffer: truncated {what}")
        _view = self._data[self._pos:self._pos + n]
        self._pos += n
        return _view

    def read_bool(self) -> bool:
        _b = self._take(1, "bool")[0]
        if _b > 1:
            raise WeaveFFIError(-1, "malformed value buffer: invalid bool byte")
        return _b == 1

    def read_i8(self) -> int:
        return struct.unpack("<b", self._take(1, "i8"))[0]

    def read_u8(self) -> int:
        return struct.unpack("<B", self._take(1, "u8"))[0]

    def read_i16(self) -> int:
        return struct.unpack("<h", self._take(2, "i16"))[0]

    def read_u16(self) -> int:
        return struct.unpack("<H", self._take(2, "u16"))[0]

    def read_i32(self) -> int:
        return struct.unpack("<i", self._take(4, "i32"))[0]

    def read_u32(self) -> int:
        return struct.unpack("<I", self._take(4, "u32"))[0]

    def read_i64(self) -> int:
        return struct.unpack("<q", self._take(8, "i64"))[0]

    def read_u64(self) -> int:
        return struct.unpack("<Q", self._take(8, "u64"))[0]

    def read_f32(self) -> float:
        return struct.unpack("<f", self._take(4, "f32"))[0]

    def read_f64(self) -> float:
        return struct.unpack("<d", self._take(8, "f64"))[0]

    def read_len(self) -> int:
        _n = struct.unpack("<I", self._take(4, "length prefix"))[0]
        if _n > len(self._data) - self._pos:
            raise WeaveFFIError(
                -1, "malformed value buffer: length prefix exceeds remaining bytes"
            )
        return _n

    def read_option_flag(self) -> bool:
        _b = self._take(1, "option flag")[0]
        if _b > 1:
            raise WeaveFFIError(-1, "malformed value buffer: invalid option flag")
        return _b == 1

    def read_string(self) -> str:
        _n = self.read_len()
        try:
            return str(self._take(_n, "string data"), "utf-8")
        except UnicodeDecodeError as _e:
            raise WeaveFFIError(
                -1, "malformed value buffer: string is not valid UTF-8"
            ) from _e

    def read_bytes(self) -> bytes:
        _n = self.read_len()
        return bytes(self._take(_n, "bytes data"))

    def expect_end(self) -> None:
        if self._pos != len(self._data):
            raise WeaveFFIError(-1, "malformed value buffer: trailing bytes")


def _decode_buffer(data: bytes, read_fn):
    """Decode exactly one value from `data` using `read_fn(reader)`."""
    _r = _BufferReader(data)
    _v = read_fn(_r)
    _r.expect_end()
    return _v


def _take_buffer(ptr, length) -> bytes:
    """Copy an owned value buffer (a raw address) and release it with
    weaveffi_free_bytes."""
    if not ptr:
        return b""
    _data = ctypes.string_at(ptr, length) if length else b""
    _lib.weaveffi_free_bytes(ptr, ctypes.c_size_t(length))
    return _data


# === Module: graphics ===

class GraphicsError(WeaveFFIError):
    """Base exception for the `graphics` module's error domain."""


class OutOfBounds(GraphicsError):
    """coordinate out of bounds"""

    CODE = 1

    def __init__(self, message: str = "coordinate out of bounds") -> None:
        super().__init__(1, message)


GraphicsError.OutOfBounds = OutOfBounds


_GRAPHICS_ERROR_CODES: Dict[int, type] = {
    1: OutOfBounds,
}


def _graphics_error_from(code: int, message: str, payload: bytes = b"") -> WeaveFFIError:
    """Build the GraphicsError subclass matching `code`, or a generic
    WeaveFFIError for codes outside the domain (panics, marshalling)."""
    _cls = _GRAPHICS_ERROR_CODES.get(code)
    if _cls is None:
        return WeaveFFIError(code, message)
    _exc = _cls(message) if message else _cls()
    return _exc


def _check_graphics_error(err: _WeaveFFIErrorStruct) -> None:
    if err.code != 0:
        code = err.code
        message = err.message.decode("utf-8") if err.message else ""
        payload = ctypes.string_at(err.payload_ptr, err.payload_len) if err.payload_ptr else b""
        _lib.weaveffi_error_clear(ctypes.byref(err))
        raise _graphics_error_from(code, message, payload)


class Unit(IntEnum):
    """A measurement unit shared with nested submodules."""
    pixels = 0
    points = 1


@dataclass
class Canvas:
    """Top-level struct that references a struct defined one level deeper."""

    width: int
    # Reference down into a nested module
    root: "Shape"


def _write_Canvas(_w: _BufferWriter, value: "Canvas") -> None:
    _w.write_i32(value.width)
    _write_Shape(_w, value.root)


def _read_Canvas(_r: _BufferReader) -> "Canvas":
    return Canvas(
        width=_r.read_i32(),
        root=_read_Shape(_r),
    )


def _pack_Canvas(value: "Canvas") -> bytes:
    _w = _BufferWriter()
    _write_Canvas(_w, value)
    return _w.finish()


def _unpack_Canvas(data: bytes) -> "Canvas":
    return _decode_buffer(data, _read_Canvas)


def new_canvas(width: int) -> "Canvas":
    """Construct a Canvas.
    """
    _fn = _lib.weaveffi_graphics_new_canvas
    _fn.argtypes = [ctypes.c_int32, ctypes.POINTER(ctypes.c_size_t), ctypes.POINTER(_WeaveFFIErrorStruct)]
    _fn.restype = ctypes.c_void_p
    _err = _WeaveFFIErrorStruct()
    _out_len = ctypes.c_size_t(0)
    _result = _fn(width, ctypes.byref(_out_len), ctypes.byref(_err))
    _check_error(_err)
    _data = _take_buffer(_result, _out_len.value)
    return _unpack_Canvas(_data)


# === Module: graphics_shapes ===

@dataclass
class Shape:
    """A struct one level deep that references both an ancestor enum and a deeper struct."""

    sides: int
    # Reference up to the parent module's enum
    unit: "Unit"
    # Reference down into a deeper module
    detail: "Detail"


def _write_Shape(_w: _BufferWriter, value: "Shape") -> None:
    _w.write_i32(value.sides)
    _w.write_i32(value.unit)
    _write_Detail(_w, value.detail)


def _read_Shape(_r: _BufferReader) -> "Shape":
    return Shape(
        sides=_r.read_i32(),
        unit=Unit(_r.read_i32()),
        detail=_read_Detail(_r),
    )


def _pack_Shape(value: "Shape") -> bytes:
    _w = _BufferWriter()
    _write_Shape(_w, value)
    return _w.finish()


def _unpack_Shape(data: bytes) -> "Shape":
    return _decode_buffer(data, _read_Shape)


def make_shape(sides: int) -> "Shape":
    """Construct a Shape.
    """
    _fn = _lib.weaveffi_graphics_shapes_make_shape
    _fn.argtypes = [ctypes.c_int32, ctypes.POINTER(ctypes.c_size_t), ctypes.POINTER(_WeaveFFIErrorStruct)]
    _fn.restype = ctypes.c_void_p
    _err = _WeaveFFIErrorStruct()
    _out_len = ctypes.c_size_t(0)
    _result = _fn(sides, ctypes.byref(_out_len), ctypes.byref(_err))
    _check_error(_err)
    _data = _take_buffer(_result, _out_len.value)
    return _unpack_Shape(_data)


def describe() -> "Canvas":
    """Nested function returning a struct owned by an ancestor module.
    """
    _fn = _lib.weaveffi_graphics_shapes_describe
    _fn.argtypes = [ctypes.POINTER(ctypes.c_size_t), ctypes.POINTER(_WeaveFFIErrorStruct)]
    _fn.restype = ctypes.c_void_p
    _err = _WeaveFFIErrorStruct()
    _out_len = ctypes.c_size_t(0)
    _result = _fn(ctypes.byref(_out_len), ctypes.byref(_err))
    _check_error(_err)
    _data = _take_buffer(_result, _out_len.value)
    return _unpack_Canvas(_data)


# === Module: graphics_shapes_geometry ===

@dataclass
class Detail:
    """A struct two levels deep."""

    area: float


def _write_Detail(_w: _BufferWriter, value: "Detail") -> None:
    _w.write_f64(value.area)


def _read_Detail(_r: _BufferReader) -> "Detail":
    return Detail(
        area=_r.read_f64(),
    )


def _pack_Detail(value: "Detail") -> bytes:
    _w = _BufferWriter()
    _write_Detail(_w, value)
    return _w.finish()


def _unpack_Detail(data: bytes) -> "Detail":
    return _decode_buffer(data, _read_Detail)


def compute(shape: "Shape") -> "Detail":
    """Deeper function taking an ancestor-module struct. Throws through the root module's inherited GraphicsError domain.

    Raises
    ------
    GraphicsError
        If the call reports one of the domain's error codes.
    """
    _fn = _lib.weaveffi_graphics_shapes_geometry_compute
    _fn.argtypes = [ctypes.c_char_p, ctypes.c_size_t, ctypes.POINTER(ctypes.c_size_t), ctypes.POINTER(_WeaveFFIErrorStruct)]
    _fn.restype = ctypes.c_void_p
    _shape_buf = _pack_Shape(shape)
    _err = _WeaveFFIErrorStruct()
    _out_len = ctypes.c_size_t(0)
    _result = _fn(_shape_buf, len(_shape_buf), ctypes.byref(_out_len), ctypes.byref(_err))
    _check_graphics_error(_err)
    _data = _take_buffer(_result, _out_len.value)
    return _unpack_Detail(_data)

# END weaveffi.py
