crates/weaveffi-cli/tests/snapshots/python_nested_modules__weaveffi_weaveffi_pyi.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION] from weaveffi.yml
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate weaveffi.yml -o <out>

from abc import ABC, abstractmethod
from enum import IntEnum
from typing import Callable, Dict, Iterator, List, Optional, Type

class WeaveFFIError(Exception):
    GENERIC_ERROR_CODE: int
    PANIC_ERROR_CODE: int
    MARSHAL_ERROR_CODE: int
    FOREIGN_ERROR_CODE: int
    code: int
    message: str
    def __init__(self, code: int, message: str) -> None: ...

class GraphicsError(WeaveFFIError):
    OutOfBounds: Type["OutOfBounds"]
    def __init__(self, code: int, message: str) -> None: ...

class OutOfBounds(GraphicsError):
    CODE: int
    def __init__(self, message: str = ...) -> None: ...

# A measurement unit shared with nested submodules.
class Unit(IntEnum):
    pixels: int
    points: int

# Top-level struct that references a struct defined one level deeper.
class Canvas:
    width: int
    # Reference down into a nested module
    root: "Shape"
    def __init__(self, width: int, root: "Shape") -> None: ...

# Construct a Canvas.
def new_canvas(width: int) -> "Canvas": ...

# A struct one level deep that references both an ancestor enum and a deeper struct.
class Shape:
    sides: int
    # Reference up to the parent module's enum
    unit: "Unit"
    # Reference down into a deeper module
    detail: "Detail"
    def __init__(self, sides: int, unit: "Unit", detail: "Detail") -> None: ...

# Construct a Shape.
def make_shape(sides: int) -> "Shape": ...

# Nested function returning a struct owned by an ancestor module.
def describe() -> "Canvas": ...

# A struct two levels deep.
class Detail:
    area: float
    def __init__(self, area: float) -> None: ...

# Deeper function taking an ancestor-module struct. Throws through the root module's inherited GraphicsError domain.
def compute(shape: "Shape") -> "Detail": ...

# END weaveffi.pyi
